--- a/index.html
+++ b/index.html
@@ -2,9 +2,41 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>My Website</title>
+	<title>Sina Khalili Personnal Website!</title>
+	    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-	<p>Hi this is an example <a href="page2.html">link</a></p>
+	<div id = "hello">
+	<h1>Hello! I'm <br> Sina Khalili</h1>
+	</div>
+	<button id = "cool">Cool</button>
+	<div id = "texterino" >
+	<h2>Second Year Computer Science Student, programming enthousiast, and general all around cool guy.</h2>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sagittis purus vitae diam scelerisque consequat. Nunc a luctus nibh. Duis consectetur libero vitae tellus scelerisque placerat. Integer eget mauris in odio tristique ultrices. Aenean pulvinar, diam vitae fermentum aliquam, ante massa volutpat mauris, a tempor odio orci sed enim. Fusce vehicula tincidunt lorem, et dictum nisl lobortis ut. Sed lobortis ex justo. Nulla eget nunc ligula. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nam erat lorem, vehicula ultrices dui vel, dapibus malesuada arcu. Nulla fermentum ac metus non sollicitudin. Cras eget ipsum sagittis urna blandit dignissim. Aliquam egestas consequat sapien ac fermentum. Curabitur convallis risus in porta suscipit. Quisque fringilla sagittis purus, id aliquet justo.
+
+Curabitur elit lectus, malesuada ut scelerisque in, scelerisque vitae ipsum. Ut varius pellentesque turpis, id lobortis neque venenatis ut. Donec eu nisl eget purus imperdiet pellentesque. Ut malesuada sodales ligula a consequat. Sed pellentesque tempor enim, in sodales nunc viverra a. Praesent a mattis massa. Proin tempus nulla est, quis scelerisque sem sodales in. Nam blandit arcu in auctor aliquam. Nunc maximus velit id sollicitudin faucibus. Donec et congue purus, in tincidunt tortor. Proin interdum ex arcu, et hendrerit lorem iaculis quis.
+
+Mauris at nulla eget erat commodo gravida eget id velit. Curabitur efficitur lacus eros. Donec lobortis ultrices volutpat. Vestibulum elementum elementum diam, quis scelerisque arcu aliquet ut. Sed vitae metus odio. Sed in quam turpis. Vestibulum blandit, tortor ullamcorper ornare accumsan, ipsum nisl auctor ex, lacinia interdum lorem orci eget urna. Vestibulum posuere quam eu maximus vehicula. Integer condimentum orci at augue mollis luctus. Maecenas gravida turpis convallis sem lobortis condimentum. Cras tristique massa eget venenatis tincidunt. Curabitur dapibus sagittis nunc in bibendum. Pellentesque ut porta lacus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+
+Mauris malesuada tincidunt viverra. Aenean tempus quam et nibh ornare, eget imperdiet leo viverra. Vivamus non diam nulla. Vivamus varius elit et pharetra sollicitudin. In eget mattis urna. Donec dignissim a justo et rhoncus. Vivamus erat velit, interdum sit amet porta ut, cursus quis purus. Sed ultricies lacus sit amet enim maximus imperdiet. Nullam eu lacinia sapien, nec consequat sapien. Aenean gravida risus tellus, sit amet congue dolor posuere quis. Nunc efficitur turpis eget est ultrices consequat. Ut vel odio purus. Aenean ullamcorper, tortor id pretium ornare, quam lectus vestibulum ligula, et lacinia nulla erat ut metus. Maecenas tincidunt dui arcu, non congue nisi interdum et. Nulla massa ipsum, egestas a lacus eu, bibendum volutpat velit. Fusce finibus ultricies leo id consequat.
+
+Nunc vel neque et risus ullamcorper blandit. Phasellus eu nisi cursus, lacinia risus et, accumsan velit. Vestibulum leo odio, dapibus sit amet libero in, ultrices gravida mauris. Vivamus at suscipit justo. Proin tortor quam, vulputate eget purus vel, suscipit laoreet eros. Suspendisse potenti. Fusce tristique neque sed lacus mattis commodo.</p>
+</div>
+
+<script src="jquery-3.2.1.js"></script>	
+<script src="jquery.scrollTo.js"></script>	
+
+<script>
+	$(function(){
+
+		$('#cool').on('click', function(){
+			$.scrollTo('#texterino', 1000);
+		});
+
+	});
+</script>
 </body>
+
+
 </html>
