--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<h1>SINA KHALILI</h1>
 	</div>
 </div>
- 	<div class="col-md-4">
+ 	<div class="col-sm-4">
  		<h1>LINKS</h1>
  		<div>
  		<a href="https://www.linkedin.com/in/sinakhalili/" target="blank"><h2>LINKEDIN</h2></a>
@@ -24,7 +24,7 @@
  		<a href="https://www.github.com/sinakhalili/" target="blank"><h2>GITHUB</h2></a>
  		</div>
  	</div>
- 	<div class="col-md-4">
+ 	<div class="col-sm-4">
  		<h1>PROJECTS</h1>
  		<a href="https://www.linkedin.com/in/sinakhalili/detail/treasury/position:1034048236/?entityUrn=urn%3Ali%3Afs_treasuryMedia%3A(ACoAABacMrIBhD5HzRTKgd5AB1-uRZZzBn9bT5I%2C1499889376630)" target="blank"><h2>VANSASH</h2></a>
  		 		<div>
@@ -33,7 +33,7 @@
  		</div>
 
  	</div>
- 	<div class="col-md-4">
+ 	<div class="col-sm-4">
  		<h1>EDUCATION</h1>
  		<a href="https://www.linkedin.com/in/sinakhalili/detail/treasury/education:347796753/?entityUrn=urn%3Ali%3Afs_treasuryMedia%3A(ACoAABacMrIBhD5HzRTKgd5AB1-uRZZzBn9bT5I%2C1474068599353)" target="blank"><h2>SIMON FRASER UNIVERSITY</h2></a>
  	</div>
