--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/custom.css">
 	<link rel="stylesheet" href="css/animate.css">
+	<link rel="icon" type="image/png" href="media/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="media/favicon-16x16.png" sizes="16x16" />
+
 </head>
 <body>
 <div class="bg"></div>
