--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 </div>
 
 <div id="navigation">
-<a href="https://github.com/sinakhalili">
+<a href="https://github.com/sinakhalili" target="_blank">
 	<div class="third">
 	<!-- <img src="media/facebigger.png">  -->
-	<h2>P R O J E C T S</h2>
+	<h2>G I T H U B</h2>
 	</div>
 </a>
 
@@ -56,10 +56,10 @@
 	<!-- <img src="media/facebigger.png">  -->
 	</div>
 
-<a href="https://linkedin.com/in/sinakhalili">
+<a href="https://linkedin.com/in/sinakhalili" target="_blank">
 	<div class="third">
 	<!-- <img src="media/facebigger.png"> -->
-	 <h2>R E S U M É</h2>
+	 <h2>L I N K E D I N</h2>
 	</div>
 </a>
 </div>
