--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 	<h2>G I T H U B</h2>
 	</div>
 </a>
-
+<a href="page-1.pdf" target="_blank">
 	<div class="third" id = "middle"> 
-	<h2>C O N T A C T</h2>
+	<h2>R E S U M E</h2>
 	<!-- <img src="media/facebigger.png">  -->
 	</div>
-
+	</a>
 <a href="https://linkedin.com/in/sinakhalili" target="_blank">
 	<div class="third">
 	<!-- <img src="media/facebigger.png"> -->
