change resume filename

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<h2>G I T H U B</h2>
 	</div>
 </a>
-<a href="page-1.pdf" target="_blank">
+<a href="resume.pdf" target="_blank">
 	<div class="third" id = "middle"> 
 	<h2>R E S U M E</h2>
 	<!-- <img src="media/facebigger.png">  -->
