--- a/test/test.html
+++ b/test/test.html
@@ -7,6 +7,6 @@
   <title>Look a test page!</title>
 </head>
 <body>
-  <h1>Okay, this is <b> cool </b> </h1>
+  <h1>Okay, this is no longer <b> cool </b> </h1>
 </body>
 </html>
