--- a/thinktech/quadrillion/dashboard.html
+++ b/thinktech/quadrillion/dashboard.html
@@ -29,7 +29,7 @@
     -->
       <div class="logo">
         <a href="#" class="logo-normal">
-           <img src="../assets/img/quadrillion_logo_insanely_small_nav.png/">
+           <img src="../assets/img/quadrillion_logo_insanely_small_nav.png">
         </a>
       </div>
       <div class="sidebar-wrapper">
