fix pic problem and stop nav

--- a/thinktech/quadrillion/tables.html
+++ b/thinktech/quadrillion/tables.html
@@ -29,7 +29,7 @@
     -->
       <div class="logo">
         <a href="./dashboard.html" class="logo-normal">
-           <img src="../assets/img/quadrillion_logo_insanely_small_nav.png/">
+           <img src="../assets/img/quadrillion_logo_insanely_small_nav.png">
         </a>
       </div>
       <div class="sidebar-wrapper">
@@ -53,13 +53,13 @@
             </a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="./map.html">
+            <a class="nav-link" href="#">
               <i class="material-icons">location_ons</i>
               <p>Maps</p>
             </a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="./notifications.html">
+            <a class="nav-link" href="#">
               <i class="material-icons">notifications</i>
               <p>Notifications</p>
             </a>
