--- a/thinktech/quadrillion/dashboard.html
+++ b/thinktech/quadrillion/dashboard.html
@@ -53,13 +53,13 @@
             </a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="./map.html">
+            <a class="nav-link" href="#">
               <i class="material-icons">location_ons</i>
               <p>Maps</p>
             </a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="./notifications.html">
+            <a class="nav-link" href="#">
               <i class="material-icons">notifications</i>
               <p>Notifications</p>
             </a>
