update to abs path

--- a/downloadables/down.html
+++ b/downloadables/down.html
@@ -10,7 +10,7 @@
   <h2> List of programs I've written, for you to download! </h2>
   <ul>
     <li>
-      <a href="./iwannabethecyrus.exe"> I wanna be the cyrus </a>
+      <a href="iwannabethecyrus.exe"> I wanna be the cyrus </a>
       <p> You may have to do a little installer thing, just hit next on it</p>
       <p> If you want you can right click and create a shortcut for it on your desktop</p>
     </li>
