--- a/cover.html
+++ b/cover.html
@@ -35,6 +35,7 @@
         </nav>
 
     </header>
+    
     <!--Main Navigation-->
     <div class="container">
         <h3 class="mt-4">
@@ -90,12 +91,23 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 mr-auto">
                 <div class="form-group">
                     <label for="exampleFormControlTextarea1">
                         <h2>Your hot new cover letter: </h2>
                     </label>
                     <textarea class="form-control rounded-1" id="newCover" rows="15"></textarea>
+                </div>
+            </div>
+            <div class="col-md-6 ml-auto">
+                <div class="form-group">
+                    <h2>Save and Restore</h2>
+                    <p>To save, simply click the button below in order to put the current for data to your local storage (on your browser)</p>
+                    <button class="btn blue-gradient btn-lg" onclick="saveValuesLocally(this)"><i class="fas fa-archive mr-2"></i> Save Values Locally</button>
+                    <p>To restore the defaults, simply click the button below. Note that what is currently in the buffer will not be saved</p>
+                    <button class="btn purple-gradient" onclick="restoreDefaults()"><i class="fas fa-magic mr-1"></i> Restore defaults</button>
+                    <p>To <b>hard</b> restore the defaults, that is delete the local storage, simply click the button below. Note that what is currently in the buffer will not be saved</p>
+                    <button class="btn btn-danger" onclick="hardReset()"><i class="fas fa-stop mr-1"></i> Hard Restore defaults</button>
                 </div>
             </div>
 
