Update link to game

--- a/meta_star_testimonials.html
+++ b/meta_star_testimonials.html
@@ -140,7 +140,7 @@ h2::after {
         </div>
         <div class="row">
             <div class="col-md-8 col-center m-auto">
-                <a href="meta_star_testimonials.html" class="btn btn-light">
+                <a href="mystifying-yonath-9d0f5e.netlify.app" class="btn btn-light">
                     Sorry I think we got side-tracked lets' get back to the thing i made for your birthday
                 </button>
             </div>
