--- a/index.html
+++ b/index.html
@@ -3,17 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <title>Sina Khalili</title>
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
+
+    <!-- favicon stuff -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="fav/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="fav/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="fav/favicon-16x16.png"
+    />
+    <link rel="manifest" href="site.webmanifest" />
+    <link rel="mask-icon" href="fav/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <!-- end favicon stuff -->
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!--CDN link for  TweenMax-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
-
     <script src="javascript/main.js"></script>
-
     <script src="javascript/ScrollMagic.min.js"></script>
-
     <script src="javascript/plugins/animation.gsap.min.js"></script>
-
     <script src="javascript/plugins/debug.addIndicators.min.js"></script>
 
     <link rel="stylesheet" href="css/style.css" />
