Make the projects tab just the github repos tab

--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@
           </div>
         </div>
         <div class="menu__item">
-          <a class="menu__item-link">Projects</a>
+          <a
+            class="menu__item-link"
+            href="https://github.com/sinakhalili/?tab=repositories"
+            >Projects</a
+          >
           <img class="menu__item-img" src="media/zoom.gif" alt="Some image" />
           <div class="marquee">
             <div class="marquee__inner" aria-hidden="true">
