Update projects to point to portfolio

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="menu__item">
           <a
             class="menu__item-link"
-            href="https://github.com/sinakhalili/?tab=repositories"
+            href="https://portfolio.sinakhalili.com"
             >Projects</a
           >
           <img class="menu__item-img" src="media/zoom.gif" alt="Some image" />
